@@ -64,6 +64,7 @@
       <preference id="elements-tag-link" name="gamefox.elements.tag.link" type="bool"/>
       <preference id="elements-deletelink" name="gamefox.elements.deletelink" type="bool"/>
       <preference id="elements-filterlink" name="gamefox.elements.filterlink" type="bool"/>
+      <preference id="elements-quotelink" name="gamefox.elements.quotelink" type="bool"/>
       <preference id="elements-msgnum" name="gamefox.elements.msgnum" type="bool"/>
       <preference id="elements-msgnum-style" name="gamefox.elements.msgnum.style" type="int"/>
       <preference id="elements-marktc" name="gamefox.elements.marktc" type="bool"/>
@@ -151,6 +152,7 @@
                       <checkbox preference="elements-tag-link" label="&main.page.messages.taglink;"/>
                       <checkbox preference="elements-deletelink" label="&main.page.messages.deletelink;"/>
                       <checkbox preference="elements-filterlink" label="&main.page.messages.filterlink;"/>
+                      <checkbox preference="elements-quotelink" label="&main.page.messages.quotelink;"/>
                       <checkbox flex="1" preference="elements-msgnum" label="&main.page.messages.numbering;"/>
                       <hbox class="indent" align="baseline">
                         <menulist preference="elements-msgnum-style">
