@@ -7,6 +7,7 @@
       third-party cookies are blocked
     * Restore QuickPost reset button with additional functionality
     * Add HTML buttons to posting
+    * Add link to message headers to quote
 
 2008-11-01:
     * version 0.6.7
